--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
         border-right: 1px solid rgba(198,193,194,0.35);
       }
     }
+    /* 手机端适配：按钮改为一列，留点呼吸感 */
+    @media (max-width: 600px) {
+      .main-layout {
+        grid-template-rows: minmax(300px, 50vh) minmax(260px, 50vh);
+      }
+
+      .actions-grid {
+        grid-template-columns: 1fr;      /* 原来是 2 列，这里改成单列 */
+      }
+
+      .action-card,
+      .task-btn {
+        font-size: 12px;
+      }
+    }
 
     /* 桌面区域 */
     .desk-area-wrapper {
@@ -134,29 +149,29 @@
       position: relative;
     }
 
-    /* 立绘：去边框 + 居中 + 轻微漂浮 */
+    /* 槿天华立绘：按高度缩放，保证整个人在框内 */
     .sprite {
       position: absolute;
       left: 50%;
-      bottom: 0;               /* 从底部贴边开始 */
+      bottom: 0;                           /* 脚贴住底部 */
       transform: translateX(-50%);
-      width: min(34%, 200px);  /* 调整整体大小 */
-      z-index: 10;             /* 在背景和遮罩之上 */
+      height: 82%;                          /* 占据容器高度的 82% */
+      max-height: 280px;                    /* 防止小屏幕太高 */
+      width: auto;                          /* 宽度随比例变化 */
+      z-index: 10;                          /* 在背景和遮罩之上 */
       background: transparent;
       cursor: pointer;
       animation: idleFloat 3.2s ease-in-out infinite;
       transform-origin: center bottom;
     }
-    @keyframes idleFloat {
-      0%,100% { transform: translateX(-50%) translateY(0); }
-      50%     { transform: translateX(-50%) translateY(4px); }
-    }
+
     .sprite img {
-      width: 100%;
-      height: auto;
+      width: auto;
+      height: 100%;                         /* 高度贴 sprite */
       display: block;
       object-fit: contain;
     }
+
 
     /* 状态栏 */
     .desk-status-row {
@@ -246,8 +261,7 @@
       gap: 6px;
       margin-bottom: 4px;
     }
-    .action-card,
-    .task-btn {
+    .action-card {
       border-radius: 10px;
       border: 1px solid rgba(198,193,194,.4);
       background: rgba(37,38,47,.95);
@@ -255,6 +269,22 @@
       cursor: pointer;
       font-size: 11px;
       text-align: left;
+    }
+    /* 任务按钮配色：稍微偏红一点，跟桌面按钮区分开 */
+    .task-btn {
+      border-radius: 10px;
+      border: 1px solid rgba(101,39,42,0.85);
+      background: rgba(61,40,42,0.95);
+      padding: 6px;
+      cursor: pointer;
+      font-size: 11px;
+      text-align: left;
+      color: #f5e9ea;
+    }
+
+    .task-btn span {
+      color: #f0d9da;
+      opacity: 0.85;
     }
     .action-title { font-size: 12px; font-weight: 500; }
     .action-sub { font-size: 11px; color: var(--c-text-sub); }
